--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Poppins', sans-serif; /* Menggunakan font modern (perlu di-import) */
     margin: 0;
     padding: 0;
-    background-color: #EDEAE4; /* Warna krem lembut, lebih baik dari f4f4f4 */
+    background-color: #6F4E37; /* Warna krem lembut, lebih baik dari f4f4f4 */
     color: #4A4A4A;
     line-height: 1.6;
 }
