--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
 /* Efek saat menggulir (JavaScript akan menambahkan kelas ini) */
 header.scrolled {
     padding: 0.8em 0;
-    background-color: #B7966B;
+    background-color: #987554;
 }
 
 header.scrolled h1 {
